--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 /* Global ==================================================== */
 :root{
     --dark-blue: #363f5f;
+    --green: #49aa26;
+    --light-green: #3dd705;
+    --red: #e92929;
 }
 
 * {
@@ -9,9 +12,25 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 93.75%;
+}
+
 body {
     background: #f0f2f5;
     font-family: 'Poppins', sans-serif;
+}
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
 }
 
 .container {
@@ -28,6 +47,59 @@ h2 {
     font-weight: normal;
 }
 
+/* Links & Buttons =========================================== */
+
+a {
+    color: var(--green);
+    text-decoration: none;
+}
+
+a:hover {
+    color: var(--light-green);
+}
+
+button {
+    width: 100%;
+    height: 50px;
+
+    border: none;
+
+    color: white;
+    background: var(--green);
+
+    padding: 0;
+
+    border-radius: 0.25rem;
+
+    cursor: pointer;
+}
+
+button:hover {
+    background: var(--light-green);
+}
+
+.button.new {
+    display: inline-block;
+    margin-bottom: .8rem;
+}
+
+.button.cancel {
+    color: var(--red);
+    border: 2px var(--red) solid;
+    border-radius: 0.25rem;
+
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    opacity: 0.6;
+}
+
+.button.cancel:hover {
+    opacity: 1;
+}
+
 /* Header ==================================================== */
 
 header {
@@ -41,7 +113,7 @@ header {
     font-weight: 100;
 }
 
-/* Balance ==================================================== */
+/* Balance =================================================== */
 
 #balance {
     margin-top: -8rem;
@@ -67,6 +139,10 @@ header {
 .card h3 {
     font-weight: normal;
     font-size: 1rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .card p {
@@ -77,11 +153,16 @@ header {
 }
 
 .card.total {
-    background: #49aa26;
+    background: var(--green);
     color: white;
 }
 
 /* Table ==================================================== */
+#transaction {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+}
 
 #data-table {
     width: 100%;
@@ -94,6 +175,11 @@ table tbody tr td:first-child {
     border-radius: 0.25rem 0 0 0.25rem;
 }
 
+table thead tr th:last-child,
+table tbody tr td:last-child {
+    border-radius: 0 0.25rem 0.25rem 0;
+}
+
 table thead th {
     background: white;
     
@@ -103,7 +189,7 @@ table thead th {
     text-align: left;
 }
 
-table tr {
+table tbody tr {
     opacity: 0.7;
 }
 
@@ -113,9 +199,7 @@ table tr:hover {
 
 table tbody td {
     background: white;
-
     padding: 1rem 2rem;
-    font-weight: normal;
 }
 
 td.description {
@@ -130,6 +214,73 @@ td.expense {
     color: #e92929;
 }
 
+/* Modal -==================================================== */
+
+.modal-overlay {
+    width: 100%;
+    height: 100%;
+    
+    background-color: rgba(0, 0, 0, 0.7);
+
+    position: fixed;
+    top: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    opacity: 0;
+    visibility: hidden;
+}
+
+.modal-overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal {
+    background: #f0f2f5;
+    padding: 2.4rem;
+}
+
+/* Form ====================================================== */
+
+#form {
+    max-width: 500px;
+}
+
+#form h2 {
+    margin-top: 0;
+}
+
+input {
+    border: none;
+    border-radius: 0.2rem;
+
+    padding: 0.8rem;
+
+    width: 100%;
+}
+
+.input-group {
+    margin-top: 0.8rem;
+}
+
+.input-group small {
+    opacity: 0.4;
+}
+
+.input-group.actions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.input-group.actions .button,
+.input-group.actions button {
+    width: 48%;
+}
+
 /* Footer ==================================================== */
 
 footer {
@@ -138,4 +289,18 @@ footer {
     color: var(--dark-blue);
 
     opacity: 0.6;
+}
+
+/* Responsive ================================================ */
+
+@media (min-width: 800px) {
+    html {
+        font-size: 87.5%;
+    }
+
+    #balance {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+    }
 }
