--- a/style.css
+++ b/style.css
@@ -231,6 +231,8 @@ td.expense {
 
     opacity: 0;
     visibility: hidden;
+
+    z-index: 999;
 }
 
 .modal-overlay.active {
@@ -241,6 +243,9 @@ td.expense {
 .modal {
     background: #f0f2f5;
     padding: 2.4rem;
+
+    position: relative;
+    z-index: 1;
 }
 
 /* Form ====================================================== */
