--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
     --dark-blue: #363f5f;
     --green: #49aa26;
     --light-green: #3dd705;
-    --red: #e92929;
+    --light-red: #ff4040;
+    --light-white: #f0f2f5;
 }
 
 * {
@@ -17,7 +18,7 @@ html {
 }
 
 body {
-    background: #f0f2f5;
+    background: var(--light-white);
     font-family: 'Poppins', sans-serif;
 }
 
@@ -84,8 +85,8 @@ button:hover {
 }
 
 .button.cancel {
-    color: var(--red);
-    border: 2px var(--red) solid;
+    color: var(--light-red);
+    border: 2px var(--light-red) solid;
     border-radius: 0.25rem;
 
     height: 50px;
@@ -151,10 +152,16 @@ header {
     line-height: 3rem;
 
     margin-top: 1rem;
+
 }
 
 .card.total {
     background: var(--green);
+    color: white;
+}
+
+.card.total.negative {
+    background: var(--light-red);
     color: white;
 }
 
@@ -213,7 +220,7 @@ td.income {
 }
 
 td.expense {
-    color: #e92929;
+    color: var(--light-red);
 }
 
 /* Modal -==================================================== */
@@ -243,7 +250,7 @@ td.expense {
 }
 
 .modal {
-    background: #f0f2f5;
+    background: var(--light-white);;
     padding: 2.4rem;
 
     position: relative;
